--- a/prog/index.html
+++ b/prog/index.html
@@ -150,6 +150,8 @@
         <form id="contact-form">
             <div class="input-box">
                 <input type="text" id="full-name" placeholder="Full Name">
+            </div>
+            <div>
                 <input type="email" id="email" placeholder="Email Address">
             </div>
             <div class="input-box">
