--- a/prog/index.html
+++ b/prog/index.html
@@ -151,7 +151,7 @@
             <div class="input-box">
                 <input type="text" id="full-name" placeholder="Full Name">
             </div>
-            <div>
+            <div class="input-box">
                 <input type="email" id="email" placeholder="Email Address">
             </div>
             <div class="input-box">
