--- a/prog/index.html
+++ b/prog/index.html
@@ -39,9 +39,9 @@
             <p>Enthusiastic beginner web developer with a solid grasp of HTML, CSS, and JavaScript. Detail-oriented and passionate about creating visually appealing and user-friendly websites. Proactive learner committed to staying updated on emerging technologies. Strong communication and collaboration skills. Seeking entry-level web development position.
             </p>
             <div class="social-media">
-                <a href="https://www.facebook.com/profile.php?id=100011166169160"><i class='bx bxl-facebook' ></i></a>
-                <a href="https://www.instagram.com/_irakl1/"><i class='bx bxl-instagram-alt' ></i></a>
-                <a href="https://www.linkedin.com/in/irakli-demuria-4b7b9323b/"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100011166169160" target="_blank"><i class='bx bxl-facebook' ></i></a>
+                <a href="https://www.instagram.com/_irakl1/" target="_blank"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="https://www.linkedin.com/in/irakli-demuria-4b7b9323b/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
             </div>
             <a href="https://github.com/DEMSKI14/PORTFOLIO/raw/main/prog/CV/Irakli%20Demuria%20CV.pdf" class="btn" download>Download CV</a>
 
