--- a/prog/index.html
+++ b/prog/index.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="home-img">
-            <img src="/IMG/IMG_3065-removebg.png" alt="">
+            <img src="/IMG/portfolio_img.png" alt="">
         </div>
     </section>
 
@@ -61,7 +61,7 @@
     <!-- about section -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/IMG/IMG_3065-removebg.png" alt="">
+            <img src="/IMG/portfolio_img.png" alt="">
         </div>
 
         <div class="about-content">
