--- a/prog/index.html
+++ b/prog/index.html
@@ -36,8 +36,7 @@
             <h3>Hello it's Me</h3>
             <h1>Irakli Demuria</h1>
             <h3>And I'm a <span class="multiple-text"></span></h3>
-            <p>Enthusiastic beginner web developer with a solid grasp of HTML, CSS, and JavaScript. Detail-oriented and passionate about creating visually appealing and user-friendly websites. Proactive learner committed to staying updated on emerging technologies. Strong communication and collaboration skills. Seeking entry-level web development position.
-            </p>
+            <p>Enthusiastic beginner web developer with a solid grasp of HTML, CSS, and JavaScript. Detail-oriented and passionate about creating visually appealing and user-friendly websites. Proactive learner committed to staying updated on emerging technologies. Strong communication and collaboration skills.</p>
             <div class="social-media">
                 <a href="https://www.facebook.com/profile.php?id=100011166169160" target="_blank"><i class='bx bxl-facebook' ></i></a>
                 <a href="https://www.instagram.com/_irakl1/" target="_blank"><i class='bx bxl-instagram-alt' ></i></a>
