--- a/prog/index.html
+++ b/prog/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="home-img">
-            <img src="/IMG/portfolio_img.png" alt="">
+            <img src="/IMG/122.png" alt="">
         </div>
     </section>
 
@@ -60,7 +60,7 @@
     <!-- about section -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/IMG/portfolio_img.png" alt="">
+            <img src="/IMG/122.png" alt="">
         </div>
 
         <div class="about-content">
