--- a/prog/index.html
+++ b/prog/index.html
@@ -42,7 +42,7 @@
                 <a href="https://www.instagram.com/_irakl1/" target="_blank"><i class='bx bxl-instagram-alt' ></i></a>
                 <a href="https://www.linkedin.com/in/irakli-demuria-4b7b9323b/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
             </div>
-            <a href="https://github.com/DEMSKI14/PORTFOLIO/raw/main/prog/CV/Irakli%20Demuria%20CV.pdf" class="btn" download>Download CV</a>
+            <a href="https://github.com/DEMSKI14/PORTFOLIO/raw/main/prog/CV/CV-Irakli Demuria" class="btn" download>Download CV</a>
 
         </div>
 
